# ETRC12306Gen

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  example.pyetgr  station_code_gen.py
.github/workflows/: build.yml
src/: cli.rs  consts.rs  lib.rs  main.rs  parse.rs  pyetgr.rs  utils.rs
